# codex-manager

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  PROJECT_SUMMARY.md  README.md  RELEASE_CHECKLIST.md  WHY_I_CANNOT_PUSH_TO_GITHUB.md  index.html  package-lock.json  package.json  tailwind.config.js
.github/: FUNDING.yml
.github/workflows/: ci.yml  release.yml
docs/: API.md  ARCHITECTURE.md  BUILD.md  OPENCODE_INTEGRATION.md
src/: App.tsx  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: config.rs  lib.rs  main.rs  models.rs  proxy.rs  routing.rs  storage.rs  usage.rs
src-tauri/src/commands/: account.rs  config.rs  mod.rs
src-tauri/src/models/: mod.rs
src-tauri/src/modules/: tray.rs
src/components/accounts/: AccountCard.tsx  AccountDetailsDialog.tsx  AddAccountDialog.tsx
src/components/common/: ModalDialog.tsx  Pagination.tsx  ToastContainer.tsx
src/components/dashboard/: BestAccountCard.tsx  StatsOverview.tsx
src/components/layout/: Layout.tsx
src/config/: mod.rs
src/hooks/: useTauri.ts
src/models/: mod.rs
src/pages/: About.tsx  Accounts.tsx  Dashboard.tsx  Settings.tsx
src/proxy/: mod.rs
src/routing/: mod.rs
src/storage/: mod.rs
src/stores/: useAccountStore.ts  useConfigStore.ts
src/types/: account.ts  config.ts
src/ui/: mod.rs
src/usage/: mod.rs
src/utils/: cn.ts  format.ts
