[package]
name = "codex-manager"
version = "0.3.0"
edition = "2021"
authors = ["ai-dev-2024 <62206502+ai-dev-2024@users.noreply.github.com>"]
description = "Professional OpenAI account management and switching tool"
repository = "https://github.com/ai-dev-2024/codex-manager"
license = "MIT"
keywords = ["openai", "api", "proxy", "account-manager", "codex"]
categories = ["command-line-utilities", "network-programming"]

[dependencies]
# Async runtime
tokio = { version = "1.43", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }

# Web framework and HTTP
axum = { version = "0.7", features = ["ws"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace", "compression"] }
hyper = { version = "1.5", features = ["full"] }
hyper-util = { version = "0.1" }
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Database
rusqlite = { version = "0.32", features = ["bundled", "chrono", "serde_json"] }

# Encryption
aes-gcm = "0.10"
aead = { version = "0.5", features = ["stream"] }
argon2 = "0.5"
rand = "0.8"
base64 = "0.22"

# CLI and TUI
clap = { version = "4.5", features = ["derive"] }
ratatui = "0.29"
crossterm = "0.28"
dialoguer = "0.11"
console = "0.15"
indicatif = "0.17"

# Configuration and environment
directories = "5.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Time and dates
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Utilities
uuid = { version = "1.12", features = ["v4", "serde"] }
sha2 = "0.10"
hex = "0.4"
dashmap = "6.1"
once_cell = "1.20"
parking_lot = "0.12"
async-trait = "0.1"
futures = "0.3"
bytes = "1.10"

# HTTP body handling
http-body = "1.0"
http-body-util = "0.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
