[package]
name = "codex_manager"
version = "0.3.0"
description = "Codex Manager - OpenAI API Account Management"
authors = ["ai-dev-2024"]
license = "MIT"
edition = "2021"

[lib]
name = "codex_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = "0.4"
dirs = "5.0"
reqwest = { version = "0.12", features = ["json", "stream"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "time"] }
rusqlite = { version = "0.32", features = ["bundled"] }
base64 = "0.22"
sysinfo = "0.31"
tokio = { version = "1", features = ["full"] }
url = "2.5.7"
tauri-plugin-dialog = "2.4.2"
tauri-plugin-fs = "2.4.4"
image = "0.25.9"
thiserror = "2.0.17"

# Proxy server dependencies
axum = { version = "0.7", features = ["multipart"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
eventsource-stream = "0.2"
dashmap = "6.1"
anyhow = "1.0"
futures = "0.3"
rand = "0.8"
async-stream = "0.3.6"
regex = "1.12.2"
once_cell = "1.19"
pin-project = "1.1"
bytes = "1.5"
tauri-plugin-single-instance = { version = "2.3.6", features = ["deep-link"] }
tracing-appender = "0.2.4"
tracing-log = "0.2.0"
tauri-plugin-autostart = "2.5.1"
sha2 = "0.10"
toml = "0.8"
toml_edit = "0.22"

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18"

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.55"
